# pixelpipes

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
cmake/: lodepng.cmake  opencv.cmake  xtensor.cmake  zlib.cmake
docs/: Doxyfile  Makefile  architecture.rst  cmd_commands.txt  conf.py  credits.rst  development.rst  examples.rst  image.rst  index.rst  link_roles.py  nodedoc.py  nodes.rst  requirements.txt  setup.rst
docs/api/: cpp.rst  index.rst  python.rst
docs/source/: api.rst  architecture.rst  conf.py  credits.rst  custom_modules.rst  example_pytorch.py  example_tensorflow.py  examples.rst  extending.rst  index.rst  modules.rst  nodes.rst  pixelpipes.compiler.rst  pixelpipes.core.rst  pixelpipes.geometry.rst  pixelpipes.image.rst  pixelpipes.resource.rst  pixelpipes.rst  pixelpipes.sink.rst  pytorch_example.rst  setup.rst  setup_pixelpipes.rst
docs/source/api/: index.rst  nodes.rst  python_compiler.rst  python_image.rst  python_nodes.rst  python_sink.rst
docs/source/tutorials/: augmentation.rst  cifar.rst  graph.rst  patches.rst
docs/tutorials/: cifar.rst  conditional.rst  davis.rst  graph.rst  index.rst  mnist.rst  pascal.rst  patches.rst  sink.rst  vot.rst
examples/: birds.py  cifar.py  cifar_pytorch.py  cifar_tensorflow.py  example_pytorch.py  example_tensorflow.py  mnist.py  patches.py  relative_import.py  simple.py
examples/images/: credits.txt
include/pixelpipes/: base.hpp  buffer.hpp  enum.hpp  geometry.hpp  image.hpp  module.hpp  operation.hpp  pipeline.hpp  python.hpp  serialization.hpp  tensor.hpp  token.hpp  type.hpp  types.hpp
include/pixelpipes/details/: api.hpp  atomic.hpp  enum.hpp  pointer.hpp  rtti.hpp  utilities.hpp
pixelforge/: __init__.py  __main__.py  list.py  menu.py  node.py
pixelpipes/: __init__.py  __main__.py  compiler.py  complex.py  expression.py  flow.py  graph.py  list.py  manager.py  node.py  numbers.py  pixelpipes_opencv.exp  pixelpipes_opencv.lib  resources.py  tensor.py  tests.py  types.py  utilities.py
pixelpipes/compiler/: __init__.py  __main__.py  core.py  utilities.py
pixelpipes/core/: __init__.py  complex.py  engine.cpp  expression.py  flow.py  list.cpp  list.py  module.cpp  numbers.cpp  numbers.py  operation.cpp  python.cpp  types.cpp
pixelpipes/core/pixelpipes/: base.hpp  engine.hpp  module.hpp  operation.hpp  python.hpp  types.hpp
pixelpipes/datasets/: __init__.py  vot.py
pixelpipes/engine/: conversion.cpp  conversion.hpp  engine.cpp  engine.hpp  geometry.cpp  geometry.hpp  image.cpp  image.hpp  list.cpp  list.hpp  numbers.cpp  numbers.hpp  points.cpp  python.cpp  python.hpp  queue.cpp  queue.hpp  random.cpp  random.hpp  types.cpp  types.hpp
pixelpipes/geometry/: __init__.py  geometry.cpp  points.cpp  points.py  python.cpp  rectangle.py  tests.py  types.py  view.cpp  view.py
pixelpipes/geometry/pixelpipes/: geometry.hpp
pixelpipes/image/: __init__.py  arithemtic.py  arithmetic.cpp  augmentation.py  common.hpp  filter.cpp  filter.py  geometry.cpp  geometry.py  image.cpp  image.py  loading.py  morphology.py  processing.cpp  processing.py  render.cpp  render.py  tests.py
pixelpipes/image/pixelpipes/: image.hpp
pixelpipes/msgpack/: numpy.py
pixelpipes/nodes/: __init__.py  _image.py  _list.py  _numeric.py  _points.py  _view.py  augmentation.py  complex.py  expression.py  flow.py  image.py  list.py  numeric.py  points.py  resources.py  view.py
pixelpipes/resource/: __init__.py  list.py  loading.py  patch.py  tests.py
pixelpipes/sink/: __init__.py  __main__.py  _torch.py  tests.py
samples/: example_pytorch.py  example_tensorflow.py
scripts/: build_manylinux.sh  local_manylinux.sh
src/: arithmetic.cpp  buffer.cpp  debug.h  geometry.cpp  image.cpp  io.cpp  list.cpp  module.cpp  numbers.cpp  operation.cpp  pipeline.cpp  queue.cpp  random.cpp  random.hpp  serialization.cpp  tensor.cpp  token.cpp  type.cpp  types.cpp
src/compiler/: optimization.cpp  optimization.hpp
src/geometry/: common.cpp  common.hpp  geometry.cpp  points.cpp  view.cpp
src/image/: arithmetic.cpp  common.cpp  common.hpp  filter.cpp  geometry.cpp  processing.cpp  python.cpp  render.cpp
src/opencv/: arithmetic.cpp  common.cpp  common.hpp  filter.cpp  geometry.cpp  loading.cpp  morphology.cpp  processing.cpp  render.cpp  view.cpp
src/pipeline/: optimization.cpp  optimization.hpp  pipeline.cpp  queue.hpp
src/python/: array.cpp  image.cpp  wrapper.cpp
src/serialization/: compression.cpp  compression.hpp  crc32c.hpp  serialization.cpp  test.cpp
src/tests/: tokens.cpp
src/tool/: cmdparse.hpp  main.cpp
tests/: comparison.py  references.py
tests/compiler/: speedtest.py
